# todo_rust

./: package.json
src/: App.css  App.tsx  globaTypes.d.ts  styles.css
src-tauri/: Cargo.toml  tasks.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database_commands.rs  main.rs
src/components/AddTemplate/: addTemplate.css  addTemplate.tsx
src/components/ConfigPage/: configPage.css  configPage.tsx
src/components/EditSubTasks/: editSubTasks.tsx
src/components/EditTemplate/: editTemplate.css  editTemplate.tsx
src/components/Modal/: modal.tsx
src/components/MyContextMenu/: myContextMenu.css  myContextMenu.tsx
src/components/TaskList/: taskList.css  taskList.tsx
src/components/WindowDecoration/: windowDecoratio.tsx  windowDecoration.css
src/components/addTask/: addTask.css  addTask.tsx
